--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,15 @@
     box-sizing: border-box;
 }
 
+/*Generic Styles*/
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #3a3a3a;
+}
+
 /* header */
 header {
     background-color: rgb(255, 0, 247);
@@ -12,6 +21,8 @@ header {
 /* main */
 main {
     background-color: chocolate;
+    /* Make main element take up any surplus space*/
+        flex-grow: 1;
 }
 /* footer */
 footer {
