Add spacing to nav list items, Add active class and menu styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,17 @@ footer {
     background: rgb(39, 63, 77);
     color: antiquewhite;
 }
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
+}
+
+#menu > li {
+    margin-bottom: 1em;
+}
+
+.active {
+    border-bottom: 1px solid antiquewhite;
+}
