Add hoover function for menu ID rule

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,3 +137,10 @@ footer {
         margin-top: 79px;
     }
 }
+
+/* Media query: tablets and larger (992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hoover {
+        border-bottom: 1px solid antiquewhite;
+    }
+}
