--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,23 @@ footer {
     padding: 1rem 0;
 }
 
+footer ul#social-list {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    list-style: none;
+}
+
+footer ul#social-list li {
+    margin: 0 10px;
+    display: inline-flex;
+    align-items: center;
+}
+
+footer ul#social-list li a {
+    color: antiquewhite;
+    text-decoration: none;
+}
 /* Media query: tablets and larger (768px and up) */
 @media  screen and (min-width: 768px) {
     /* Header */
@@ -144,3 +161,4 @@ footer {
         border-bottom: 1px solid antiquewhite;
     }
 }
+
