Hide section heading with utility class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,10 @@ header {
     align-items: baseline;
 }
 
+.hidden-heading {
+    display: none;
+}
+
 header a {
     text-decoration: none;
     color: inherit;
