--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,10 +40,6 @@ header {
     align-items: baseline;
 }
 
-.hidden-heading {
-    display: none;
-}
-
 header a {
     text-decoration: none;
     color: inherit;
@@ -164,9 +160,10 @@ main {
     justify-content: center;
 }
 
+/* Meetup Times section */
 #times {
-    background: url('../images/dublin-city.webp') no-repeat center / cover;
-    /* Handles responsivity without the need for media query*/
+    background: url('../images/dublin-city.webp') no-repeat center/cover;
+    /* Handles responsivity without the need for a media query */
     display: flex;
     flex-wrap: wrap;
 }
@@ -176,18 +173,29 @@ main {
     background-color: rgba(0, 0, 0, .6);
     padding: 15px;
     text-align: center;
-    /* This will not wrap on screnns less than 400px wide.
-    Each div will expand to fill the available space */
+    /* This will not wrap on screens of less than 400px wide.
+    Each div will expand to fill the available space on its row */
     flex-basis: 200px;
     flex-grow: 1;
-    /* Creates grid of meetup time divs over the background image */
+    /* Creates a grid of meetup time divs over the background image */
     border: 2px solid white;
 }
 
 #times h3 {
-    /* Override the heading color in the genral styles */
+    /* Override the heading colour set in general styles */
     color: #fafafa;
 }
+
+/* Gallery page */
+#photos img {
+    width: 100%;
+    line-height: 1em;
+}
+
+#photos {
+    line-height: 0;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
@@ -201,6 +209,14 @@ main {
     font-size: 160%;
     padding: 5%;
     color: #3a3a3a;
+}
+
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
 }
 
 /* Media query: tablets and larger (768px and up) */
@@ -263,12 +279,21 @@ main {
         align-self: flex-end;
     }
 
+    /* Gallery */
+    #photos {
+        column-count: 3;
+    }
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+
+    /* Gallery */
+    #photos {
+        column-count: 4;
     }
 }
 
